--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+body{
+	width:100%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	background: #f5f5f5;
+	text-align:center
+}
+img{
+	 width: 90%;
+     border-radius: 8px;
+     margin-bottom: 18px;
+     object-fit: cover;
+}
+button{
+	margin:10px;
+	background-color:red;
+	color:blue;
+	border-radius:5px;
+}
